--- a/templates/learning-analytics-dashboard.html
+++ b/templates/learning-analytics-dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Featurepreneur</title>
+    <title>Team 7</title>
     <script src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
@@ -181,15 +181,7 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse pull-right">
             <ul class="nav navbar-nav">
-              <li>
-                <a href="/testimonial" target="_blank">Testimonial</a>
-              </li>
-              <li>
-                <a href="https://tactlabs.gitbook.io/featurepreneur" target="_blank">Docs</a>
-              </li>
-              <!-- <li >
-                <a href="employer-login.html">For Employers</a>
-              </li> -->
+             
   
               <li><a href="/login">Log in</a></li>
               <li>
