--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Featurepreneur - Micro-prediction/Analytics for everyone!
+        Team 7
     </title>
 
     {% include "header.html" %}
