--- a/templates/learning-analytics-contributors.html
+++ b/templates/learning-analytics-contributors.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Featurepreneur</title>
+    <title>Team 7</title>
 
     {% include "header.html" %}
 
@@ -108,16 +108,7 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse pull-right">
             <ul class="nav navbar-nav">
-              <li>
-                <a href="/testimonial" target="_blank">Testimonial</a>
-              </li>
-              <li>
-                <a href="https://tactlabs.gitbook.io/featurepreneur" target="_blank">Docs</a>
-              </li>
-              <!-- <li >
-                <a href="employer-login.html">For Employers</a>
-              </li> -->
-  
+            
               <li><a href="/login">Log in</a></li>
               <li>
                 <a class="btn btn-primary btn-sign" href="/signup"
