--- a/templates/video_ttc_v2.html
+++ b/templates/video_ttc_v2.html
@@ -64,24 +64,11 @@
         <!-- Video (right) -->
         <div class="right-video right-close" id="right-video">
             <section class="inner-pg-dash">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                        <a href="/features">Home</a>
-                    </li>
-                    <li class="breadcrumb-item">
-                        <a href="/subscribed/courses">Courses</a>
-                    </li>
-                    <li class="breadcrumb-item">
-                        <a href="/course/{{course_id}}">{{course_name}}</a>
-                    </li>
-                    <li class="breadcrumb-item">{{result.video_title}}</li>
-                    </ol>
-                </nav>
+                
                 <div class="embed-responsive embed-responsive-16by9">
                     {% if vimeo %}
                     <iframe
-                        src="https://player.vimeo.com/video/{{result.video_link}}?badge=0&amp;amp;autopause=0&amp;amp;player_id=0&amp;amp;app_id=58479 "
+                        src="https://www.youtube.com/embed/il_t1WVLNxk"
                         width="50% " height="1000"
                         frameborder="0"
                         allow="autoplay; fullscreen; picture-in-picture "
