--- a/templates/all_courses.html
+++ b/templates/all_courses.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Featurepreneur
+        Teammit
     </title>
     {% include "header.html" %}
 
@@ -49,7 +49,7 @@
                                 <h2 data-test="catalog-title" class="css-p16b7 e1a1m3xa0">Browse All Courses</h2>
                                 <p data-test="catalog-subtitle" class="css-g9klz e1a1m3xa2">
 
-                                    Welcome to Featurepreneur!
+                                    Welcome to Teammit!
                                     <br> These are the courses available for subscription 
                                     
                                 </p>
