--- a/templates/course_new_ttc.html
+++ b/templates/course_new_ttc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Featurepreneur</title>
+    <title>Teammit</title>
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
