--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -440,12 +440,12 @@
                         <span>Tasks</span>
                     </li>
                 </a>
-                <a href="/stats" style="text-decoration: none;">
+                <a href="/progress" style="text-decoration: none;">
                     <li class="item">
                         <span>My Progress</span>
                     </li>
                 </a>
-                <a href="/contests" style="text-decoration: none;">
+                <a href="/calendar" style="text-decoration: none;">
                     <li class="item">
                         <span>Contest Calendar</span>
                     </li>
@@ -733,7 +733,7 @@
 				"git-rebase": "#",
 				go: "//",
 				groovy: "//",
-				handlebars: "{{!--DELIMITER--}}",
+				
 				hlsl: "//",
 				html: "<!--DELIMITER-->",
 				ignore: "#",
