--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -435,7 +435,7 @@
             </div>
             <div class="left-content">
                 <ul class="action-list">
-                <a href="/tasks" style="text-decoration: none;">
+                <a href="/" style="text-decoration: none;">
                     <li class="item">
                         <span>Tasks</span>
                     </li>
