--- a/templates/all_courses.html
+++ b/templates/all_courses.html
@@ -35,9 +35,8 @@
                 <main class="css-1htmiyc e1vxon760">
                     <nav aria-label="breadcrumb" class="navbar-breadcrumb" style="margin-left: 80px;">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/features">Home</a></li>
+                            <li class="breadcrumb-item"><a href="/">Home</a></li>
                             | <a href="/all/courses"><b>Browse Courses</b></a></li>
-                            | <a href="/subscribed/courses">Subscribed Courses</a></li>
                         </ol>
                     </nav>
                    
