--- a/templates/course_new_ttc.html
+++ b/templates/course_new_ttc.html
@@ -536,7 +536,7 @@
                 <div class="course-sidebar">
                   <h3>
                     <b>{{subscription_cost}}</b> <br />
-                    Tact Credits
+                     Credits
                   </h3>
                 </div>
 
@@ -547,7 +547,7 @@
                 
                 {%else%}
                 <p>
-                    Your Tact Credits is Low
+                    Your Credits is Low
 
                     <br>
                     <a href="/buy/credits" style="color:blue; font-size:14px">Buy more credits here</a>
@@ -555,7 +555,7 @@
                 {%endif%}
                 <p>
                     Your current <br />
-                    Tact Credits is <b>{{user_credits}}</b>
+                     Credits is <b>{{user_credits}}</b>
                 </p>
               </div>
 
