--- a/templates/video_ttc.html
+++ b/templates/video_ttc.html
@@ -387,7 +387,7 @@
 
                                     <nav aria-label="breadcrumb">
                                         <ol class="breadcrumb">
-                                            <li class="breadcrumb-item"><a href="/features">Home</a></li>
+                                            <li class="breadcrumb-item"><a href="/">Home</a></li>
                                             <li class="breadcrumb-item"><a href="/all/courses">Courses</a></li>
                                             <li class="breadcrumb-item">
                                                 <a href="/course/{{course_id}}">Course</a>
