--- a/templates/course_new_ttc_credits.html
+++ b/templates/course_new_ttc_credits.html
@@ -90,7 +90,7 @@
                 <div class="current-credit-details">
                   <h2>
                     Your Current <br />
-                    Tact credits
+                     credits
                   </h2>
                   <p>{{user_credits}}</p>
                   <span>-</span>
@@ -100,7 +100,7 @@
                 <div class="current-credit-details">
                   <h2>
                     Course Subscribe <br />
-                    Tact Cost
+                     Cost
                   </h2>
                   <p>{{subscription_cost}}</p>
                   <span>=</span>
@@ -109,7 +109,7 @@
               <div class="col-lg-3 col-md-3 col-sm-12">
                 <div class="current-credit-details">
                   <h2>
-                    Remaining Tact Credits <br />
+                    Remaining Credits <br />
                     after Subscription
                   </h2>
                   <p>{{remaining_credits}}</p>
