--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -431,7 +431,7 @@
         
         <div class="left-bar">
             <div class="upper-part">
-
+    
             </div>
             <div class="left-content">
                 <ul class="action-list">
@@ -450,7 +450,7 @@
                         <span>Contest Calendar</span>
                     </li>
                 </a>
-                <a href="/learning-path" style="text-decoration: none;">
+                <a href="/learning/path" style="text-decoration: none;">
                     <li class="item">
                         <span>Learning Path</span>
                     </li>
@@ -458,6 +458,16 @@
                 <a href="/mentor" style="text-decoration: none;">
                     <li class="item">
                         <span>Mentor</span>
+                    </li>
+                </a>
+                <a href="/all/courses" style="text-decoration: none;">
+                    <li class="item">
+                        <span>Courses</span>
+                    </li>
+                </a>
+                <a href="/la/dashboard" style="text-decoration: none;">
+                    <li class="item">
+                        <span>Learning Analytics</span>
                     </li>
                 </a>
                 </ul>
