--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -423,8 +423,49 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap" rel="stylesheet">
     <div class="task-manager">
         <div class="left-bar">
-            <div class="upper-part">
-    
+            <div class="left-bar">
+                <div class="upper-part">
+        
+                </div>
+                <div class="left-content">
+                    <ul class="action-list">
+                    <a href="/" style="text-decoration: none;">
+                        <li class="item">
+                            <span>Tasks</span>
+                        </li>
+                    </a>
+                    <a href="/progress" style="text-decoration: none;">
+                        <li class="item">
+                            <span>My Progress</span>
+                        </li>
+                    </a>
+                    <a href="/calendar" style="text-decoration: none;">
+                        <li class="item">
+                            <span>Contest Calendar</span>
+                        </li>
+                    </a>
+                    <a href="/learning/path" style="text-decoration: none;">
+                        <li class="item">
+                            <span>Learning Path</span>
+                        </li>
+                    </a>
+                    <a href="/mentor" style="text-decoration: none;">
+                        <li class="item">
+                            <span>Mentor</span>
+                        </li>
+                    </a>
+                    <a href="/all/courses" style="text-decoration: none;">
+                        <li class="item">
+                            <span>Courses</span>
+                        </li>
+                    </a>
+                    <a href="/la/dashboard" style="text-decoration: none;">
+                        <li class="item">
+                            <span>Learning Analytics</span>
+                        </li>
+                    </a>
+                    </ul>
+                </div>
             </div>
             <div class="left-content">
                 <ul class="action-list">
