--- a/templates/progress.html
+++ b/templates/progress.html
@@ -472,6 +472,16 @@
                         <span>Mentor</span>
                     </li>
                 </a>
+                <a href="/all/courses" style="text-decoration: none;">
+                    <li class="item">
+                        <span>Courses</span>
+                    </li>
+                </a>
+                <a href="/la/dashboard" style="text-decoration: none;">
+                    <li class="item">
+                        <span>Learning Analytics</span>
+                    </li>
+                </a>
                 </ul>
             </div>
         </div>
